--- a/FacturacionDobleEje/MainWindow.xaml
+++ b/FacturacionDobleEje/MainWindow.xaml
@@ -2,8 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:FacturacionDobleEje"
-        Title="Facturación - Doble Eje Construcción" Height="600" Width="1100"
+        Title="Facturación - Doble Eje Construcción" Height="600" Width="1300"
         Icon="pack://application:,,,/Logo.ico">
+    <Window.Resources>
+        <local:FirstLineConverter x:Key="FirstLineConverter"/>
+    </Window.Resources>
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
@@ -19,12 +22,38 @@
                 </Grid.RowDefinitions>
 
                 <DataGrid x:Name="dgMateriales" AutoGenerateColumns="False" CanUserAddRows="False"
-                          SelectionMode="Single" IsReadOnly="False">
+                          SelectionMode="Single" CellEditEnding="dgMateriales_CellEditEnding">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="40" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="Nombre" Binding="{Binding Name}" Width="*" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="Precio (€)" Binding="{Binding UnitPrice}" Width="90" IsReadOnly="True"/>
-                        <DataGridTextColumn Header="Unidad" Binding="{Binding Unit}" Width="80" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="Nombre" Binding="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Width="125"/>
+                        <DataGridTextColumn Header="Descripción" Width="150" IsReadOnly="True">
+                            <DataGridTextColumn.Binding>
+                                <Binding Path="Description" Converter="{StaticResource FirstLineConverter}"/>
+                            </DataGridTextColumn.Binding>
+
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+                                    <Setter Property="ToolTip">
+                                        <Setter.Value>
+                                            <TextBlock Text="{Binding Description}"
+                                                TextWrapping="Wrap"
+                                                MaxWidth="300"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Precio (€)" Binding="{Binding UnitPrice, StringFormat=F2, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Width="90">
+
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextAlignment" Value="Right"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Unidad" Binding="{Binding Unit, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Width="70.5"/>
                     </DataGrid.Columns>
                 </DataGrid>
 
