- Porcentaje de beneficio - Generación de PDF Gastos/Beneficios - Formateo de datos a 2 decimales - Ajuste de anchos de columnas - Número de factura por defecto

--- a/FacturacionDobleEje/MainWindow.xaml
+++ b/FacturacionDobleEje/MainWindow.xaml
@@ -94,8 +94,9 @@
                         <DataGridTextColumn Header="Material" Binding="{Binding Material.Name}" Width="*" IsReadOnly="True" />
                         <DataGridTextColumn Header="Cantidad" Binding="{Binding Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="90"/>
                         <DataGridTextColumn Header="Precio u. (€)" Binding="{Binding UnitPrice}" Width="100" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="Beneficio (%)" Binding="{Binding ProfitPercent, UpdateSourceTrigger=PropertyChanged}" Width="110"/>
                         <DataGridTextColumn Header="Descuento (%)" Binding="{Binding DiscountPercent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="110"/>
-                        <DataGridTextColumn Header="Importe (€)" Binding="{Binding Amount}" Width="100" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="Importe (€)" Binding="{Binding Amount, StringFormat=F2}" Width="100" IsReadOnly="True"/>
                     </DataGrid.Columns>
                 </DataGrid>
 
